# eiger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  eiger  gen_code.sh  ipopt.opt
Maxima/: .CartPole.max.swp  CartPole.max  brachistochrone.mac  eiger.mac  max_distance.mac  min_triangle_circ.mac  orbit.mac
code_gen/: gen_header.py  gen_source.py  gen_var_definitions.py
licenses/TCLAP/: LICENSE
src/: brachistochrone.cpp  min_triangle_circ.cpp
